--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,5 @@
-#SPDX-License-Identifier: MIT-0
----
-# defaults file for text_review
+db_image: "postgres:18-alpine"
+db_user: "textreview"
+db_name: "textreview"
+
+db_url: "postgres://{{ db_user }}:{{ db_password }}@{{ app_name }}-{{ env }}-db:5432/{{ db_name }}"
