--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,4 +2,5 @@ db_image: "postgres:18-alpine"
 db_user: "textreview"
 db_name: "textreview"
 
-db_url: "postgres://{{ db_user }}:{{ db_password }}@{{ app_name }}-{{ env }}-db:5432/{{ db_name }}"
+db_host: "{{ app_name }}-{{ env }}-db"
+db_url: "postgres://{{ db_user }}:{{ db_password }}@{{ db_host }}:5432/{{ db_name }}"
