--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,7 @@ DB_NAME: "textreview"
 
 DB_HOST: "{{ app_name }}-{{ env }}-db"
 DB_URL: "postgres://{{ DB_USER }}:{{ DB_PASSWORD }}@{{ DB_HOST }}:5432/{{ DB_NAME }}"
+
+DB_HEALTHCHECK_INTERVAL: "10s"
+DB_HEALTHCHECK_TIMEOUT: "5s"
+DB_HEALTHCHECK_RETRIES: 5
