--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,17 @@
-DB_IMAGE: "docker.io/library/postgres:18-alpine"
-DB_USER: "textreview"
-DB_NAME: "textreview"
+# --- Database ---
+db_image: "docker.io/library/postgres:18-alpine"
+db_user: "textreview"
+db_name: "textreview"
 
-DB_HOST: "{{ app_name }}-{{ env }}-db"
-DB_URL: "postgres://{{ DB_USER }}:{{ DB_PASSWORD }}@{{ DB_HOST }}:5432/{{ DB_NAME }}"
+db_host: "{{ product_name }}-{{ env }}-db"
+db_url: "postgres://{{ db_user }}:{{ db_password }}@{{ db_host }}:5432/{{ db_name }}"
 
-DB_HEALTHCHECK_INTERVAL: "10s"
-DB_HEALTHCHECK_TIMEOUT: "5s"
-DB_HEALTHCHECK_RETRIES: 5
+# --- Grafana Loki ---
+loki_host: "https://logs-prod-012.grafana.net"
+loki_username: ""
+loki_api_key: ""
+
+# --- Docker/Podman ---
+db_healthcheck_interval: "10s"
+db_healthcheck_timeout: "5s"
+db_healthcheck_retries: 5
